2011-06-10 John Wu <John dot Wu at ACM dot org>
	* src/selectClause.h, src/selectClause.cpp: group the functions in
	select clause according to the visibility of the expressions

2011-06-09 John Wu <John dot Wu at ACM dot org>
	* src/table.h: add two optional arguments to functions of the form
	ibis::table::getColumnAsTypes at the request of Jon Strabala

2011-06-08 John Wu <John dot Wu at ACM dot org>
	* src/whereLexer.ll: enforce the need for coma as separator in
	string sequences (to avoid the problem of treating a LIKE
	expression as a string sequence by the lexer, a problem reported
	by Jon Strabala)
	* src/selectClause.h, src/selectClause.cpp: rename the functions
	to separate the internal terms and external expressions more
	cleanly.   Add function getGroupbyKeys.

2011-06-07 John Wu <John dot Wu at ACM dot org>
	* src/colValues.cpp:4048 remove the extra statement that
	increments j (and causes a problem with segmenting string values
	reported by Anderson Carniel)

2011-06-04 John Wu <John dot Wu at ACM dot org>
	* src/jnatural.cpp: use auto_ptr to make sure the memory is freed
	in fillResults
	* src/bord.cpp: add code block to try the column name without any
	prefixes
	* src/selectParser.yy: add back support of using keyword stddev
	for standard deviation (in addition to stdev, and stdsamp)

2011-06-03 John Wu <John dot Wu at ACM dot org>
	* src/part.h, src/util.h: comment out ibis::util::clearDatasets
	* src/ibis.h: remove ibis::util::clearDatasets from atexit
	registration, invoke the equivalent function in the destructor of
	ibis::fileManager instead.  The avoids the problem of attempting
	to free data partitions after the file manager has been freed
	* src/category.cpp: print out dic.size() as the upper bound
	instead of the content of upper which can become stale (a problem
	spotted in a -part.txt file sent out by Anderson Carniel)

2011-06-02 John Wu <John dot Wu at ACM dot org>
	* src/selectClause.cpp: comment out the use of ordered_ in